--- a/README.Rmd
+++ b/README.Rmd
@@ -82,7 +82,7 @@ library(seliNDRIx)
  write.csv(top20, "D:/Top20.csv", row.names = FALSE)
  # Example using random function
  # Read the data
- data <- read.csv("D:/sl.csv")
+ data("data", package = "seliNDRIx")
  # Run the analysis
  results2 <- random_si(data,
  traits = c("tmy", "py", "fatyield"),
